src/objects/DFC_Community__c.object
<CustomObject>
    <description>Dementia Friendly Community - Application for Recognition</description>
    <fields>
        <fullName>Central_Location__c</fullName>
        <description>Does this Dementia Friendly Community have a central location ? Yes or No</description>
        <label>Central Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Reference__c</fullName>
        <description>This field is used in the Approval Request Email Template. It&apos;s required because there is an obscure bug in Salesforce that confuses Name__c with Name in the email generation process.</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The Country where the community is located. This will determine the approval process</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>DFC_County__c</referenceTo>
        <relationshipLabel>DFC Communities</relationshipLabel>
        <relationshipName>DFC_Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAA_Region__c</fullName>
        <formula>Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAA Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAA_Regional_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The DAA Regional Lead, who will be notified when a new community is created</description>
        <label>DAA Regional Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DFC_Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DA_Alliance__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Dementia Action Alliance that thae Dementia Friendly Community is associated with</description>
        <label>DA Alliance</label>
        <referenceTo>DFC_Alliance__c</referenceTo>
        <relationshipLabel>DA_Alliance</relationshipLabel>
        <relationshipName>Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>The date the Community was approved</description>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <description>The date the community was submitted for approval</description>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duplicate_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserRegionalLead__c</fullName>
        <description>Checks whether the currently logged in user is the regional lead</description>
        <formula>DAA_Regional_Lead__c = $User.Id</formula>
        <label>IsUserRegionalLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <formula>Owner:User.FirstName  + &apos; &apos; +  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Village</fullName>
                </value>
                <value>
                    <fullName>Town</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The Community Location</description>
        <inlineHelpText>You can give the name of the village / town / city, region and county for example.</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Community Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <inlineHelpText>Please give the approximate size of the population for the community becoming dementia friendly</inlineHelpText>
        <label>Population Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Region of England or Wales that the Community is in. This determines the Regional Lead which is the first approver</description>
        <label>Region</label>
        <referenceTo>DFC_DAA_Region__c</referenceTo>
        <relationshipLabel>DFC Communities</relationshipLabel>
        <relationshipName>DFC_Communities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_No_Central_Location__c</fullName>
        <description>Explanation field for when there is No Central Location - e.g. Online Community</description>
        <label>Why No Central Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DFC Community</label>
    <listViews>
        <fullName>Active_Communities</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>Name__c</columns>
        <columns>DA_Alliance__c</columns>
        <columns>Status__c</columns>
        <columns>Lead__c</columns>
        <columns>Location__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Approved__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>DAA_Regional_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Dementia Friendly Communities</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>Name__c</columns>
        <columns>DA_Alliance__c</columns>
        <columns>Status__c</columns>
        <columns>Lead__c</columns>
        <columns>Location__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Approved__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>DAA_Regional_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Dementia Friendly Communities</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Communiteis_Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Location__c</columns>
        <columns>Location_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>Communiteis Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>DFC_Admin_Team_DFC_Community</fullName>
        <filterScope>Queue</filterScope>
        <label>DFC_Admin_Team</label>
        <queue>DFC_Admin_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFC_Gwent_Leads_DFC_Community</fullName>
        <filterScope>Queue</filterScope>
        <label>DFC  Gwent Leads</label>
        <queue>DFC_Gwent_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFC_North_Wales_Leads_DFC_Community</fullName>
        <filterScope>Queue</filterScope>
        <label>DFC North Wales Leads</label>
        <queue>DFC_North_Wales_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFC_South_East_Wales_Leads_DFC_Community</fullName>
        <filterScope>Queue</filterScope>
        <label>DFC South East Wales Leads</label>
        <queue>DFC_South_East_Wales_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DFC_South_West_Wales_Leads_DFC_Community</fullName>
        <filterScope>Queue</filterScope>
        <label>DFC South West Wales Leads</label>
        <queue>DFC_South_West_Wales_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DF_Communities</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Name__c</columns>
        <columns>DAA_Regional_Lead__c</columns>
        <columns>DA_Alliance__c</columns>
        <columns>Lead__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Location__c</columns>
        <columns>Date_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>DF Communities</label>
    </listViews>
    <listViews>
        <fullName>Dementia_Friendly_Communities_in_England</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Name__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Lead__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>England</value>
        </filters>
        <label>Dementia Friendly Communities in England</label>
    </listViews>
    <listViews>
        <fullName>Dementia_Friendly_Communities_in_Wales</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Central_Location__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Lead__c</columns>
        <columns>Location__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Wales</value>
        </filters>
        <label>Dementia Friendly Communities in Wales</label>
    </listViews>
    <listViews>
        <fullName>My_Communities_For_Regional_Leads</fullName>
        <columns>Community_Reference__c</columns>
        <columns>Name__c</columns>
        <columns>DA_Alliance__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionalLead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Communities (For Regional Leads)</label>
    </listViews>
    <nameField>
        <displayFormat>DFC-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Communities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>